applications/openeuler-mirrorlist-server/mirror-manager/cron-mm2-crawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron-mm2-crawler-deployment
  namespace: openeuler-mirrorlist-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cron-mm2-crawler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cron-mm2-crawler
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/mirror-manager:eaa965b3aaf8e26c7f02ed9c37db58905d48b6d2 
        imagePullPolicy: IfNotPresent
        name: cron-mm2-crawler
        command:
        - /bin/bash
        - -c
        - /mirrormanager2/utility/cron_mm2_crawler
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
