applications/openeuler-mirrorlist-server/mirror-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-manager-deployment
  namespace: openeuler-mirrorlist-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirror-manager
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mirror-manager
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/mirror-manager:eaa965b3aaf8e26c7f02ed9c37db58905d48b6d2 
        imagePullPolicy: IfNotPresent
        name: cron-mm2-update-master-directory-list
        command:
        - /bin/bash
        - -c
        - /mirrormanager2/utility/cron_mm2_update-master-directory-list
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
        volumeMounts:
        - mountPath: /repo/openeuler
          name: data-volume
      - name: rsync-client
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/repo-client:122abc521614802693d71f85303360a21972cefb
        volumeMounts:
        - mountPath: /repo/openeuler
          name: data-volume
        command:
        - /bin/sh
        - -c
        - |
          /usr/bin/rsync --daemon --config /etc/rsyncd.conf
          exec tini -- entrypoint.sh
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 4000m
            memory: 4000Mi
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: openeuler-repo-data-volume
