applications/openeuler-mirrorlist-server/mirror-manager/mirror-manager-only.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-manager-only-deployment
  namespace: openeuler-mirrorlist-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirror-manager-only
  template:
    metadata:
      labels:
        app: mirror-manager-only
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/mirror-manager:eaa965b3aaf8e26c7f02ed9c37db58905d48b6d2 
        imagePullPolicy: IfNotPresent
        name: mirror-manager-only
        args:
        - "8080"
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
