applications/openeuler-mirrorlist-server/mirror-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirror-manager-service
  namespace: openeuler-mirrorlist-server
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: mirror-manager
  type: ClusterIP
